Bug 1026397 part.2 Shouldn't separate input string between a surrogate pair at handling maxlength r=smontagu+ehsan